# movienook

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
.kiro/specs/movie-tracking-api/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: project.md
alembic/: env.py
alembic/versions/: 130924a14a37_initial_migration.py
app/: database.py  dependencies.py  main.py
app/core/: config.py  security.py
app/models/: __init__.py  movie.py  user.py
app/routers/: auth.py  movies.py
app/schemas/: __init__.py  movie.py  user.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/.kiro/specs/movienook-frontend/: design.md  requirements.md  tasks.md
frontend/.kiro/steering/: frontend.md
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  axios.ts  movies.ts
frontend/src/components/: ConfirmModal.tsx  Layout.tsx  LoadingSpinner.tsx  MovieCard.tsx  MovieForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AddMoviePage.tsx  DashboardPage.tsx  EditMoviePage.tsx  LoginPage.tsx  MovieDetailPage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts
tests/: conftest.py  test_auth_dependency.py  test_config.py  test_delete_movie.py  test_get_movie.py  test_jwt_token.py  test_list_movies.py  test_login.py  test_main_app.py  test_movie_creation.py  test_registration.py  test_update_movie.py
